--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam's Kitchen Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="https://static.lieferando.de/images/restaurants/de/ROP133QN/logo_465x320.png">
-    <h1>Welcome to Adam's Kitchen recipes list</h1>
-    <h1>Recipes:</h1>
+    <img id="headerimg" src="https://static.lieferando.de/images/restaurants/de/ROP133QN/logo_465x320.png">
+    <h1 class="main header">Welcome to Adam's Kitchen recipes list</h1>
+    <em><h1 class="recipes">Recipes:</h1></em>
     <ul>
-    <li><a href="recipes/pierogies.html">Pierogies</a></li>
-    <li><a href="recipes/polish-barszcz.html">Polish Barszcz</a></li>
+    <li><a class="list pierogies" href="recipes/pierogies.html">Pierogies</a></li>
+    <li><a class="list barszcz" href="recipes/polish-barszcz.html">Polish Barszcz</a></li>
     </ul>
 </body>
 </html>
