--- a/recipes/polish-barszcz.html
+++ b/recipes/polish-barszcz.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Polish Red Barszcz Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Polish Red Barszcz Recipe:</h1>
     <img src="https://bi.im-g.pl/im/fa/60/17/z24511226IER,Barszcz-czerwony-czysty-najczesciej-podajemy-z-uszkami.jpg" width="600">
-    <p>Borscht – an authentic Polish soup,  is also known as Barszcz Czerwony. 
-        It’s a classic dish that is traditionally served on Christmas Eve. It’s made from beets, and it has a clean, almost see-through consistency; 
+    <p>Borscht - an authentic Polish soup,  is also known as Barszcz Czerwony. 
+        It's a classic dish that is traditionally served on Christmas Eve. It's made from beets, and it has a clean, almost see-through consistency; 
         it can be served in mugs to drink or in bowls with Polish mushroom “uszka” pierogi, or Sauerkraut and Mushroom Pierogi. </p>
     <h2>Ingredients:</h2>
     <ul>
@@ -21,16 +22,18 @@
         <li>Leeks</li>
         <li>Dry Porcini Mushrooms</li>
         <li>Parsley</li>
+    </ul>
+
     <h2>How Do You Make Authentic Beetroot Borscht:</h2>
-        <ol>
-            <li>Place dry mushrooms in a bowl and cover them with hot boiling water. Let them soak for 5 minutes.</li>
-            <li>Peel, wash and cut into chunks your vegetables (carrots, parsnip, celery root, leeks, and parsley);</li>
-            <li>Place your vegetables and your soaked mushrooms in the large pot, cover with water, add a tablespoon of salt, bay leaves, and allspice, and boil for about 30 minutes, uncovered;</li>
-            <li>Prepare beets – peel them and slice in 1/2 inch slices; peel your garlic and slice the apple;</li>
-            <li>Add beets, garlic, apple, and spices (salt, sugar, and marjoram) to the vegetable broth. At this time, add one tablespoon of vinegar and one tablespoon of lemon to preserve the beautiful color of the beets. Cook it for another half hour uncovered;</li>
-            <li>Add the remaining vinegar, and adjust seasoning with vinegar, salt & pepper, as needed.</li>
-            <li>Discard the vegetables and pour your borscht through the strainer into mugs for drinking or bowls to serve with mushroom pierogi.</li>
-        </ol>
+    <ol>
+        <li>Place dry mushrooms in a bowl and cover them with hot boiling water. Let them soak for 5 minutes.</li>
+        <li>Peel, wash and cut into chunks your vegetables (carrots, parsnip, celery root, leeks, and parsley);</li>
+        <li>Place your vegetables and your soaked mushrooms in the large pot, cover with water, add a tablespoon of salt, bay leaves, and allspice, and boil for about 30 minutes, uncovered;</li>
+        <li>Prepare beets - peel them and slice in 1/2 inch slices; peel your garlic and slice the apple;</li>
+        <li>Add beets, garlic, apple, and spices (salt, sugar, and marjoram) to the vegetable broth. At this time, add one tablespoon of vinegar and one tablespoon of lemon to preserve the beautiful color of the beets. Cook it for another half hour uncovered;</li>
+        <li>Add the remaining vinegar, and adjust seasoning with vinegar, salt & pepper, as needed.</li>
+        <li>Discard the vegetables and pour your borscht through the strainer into mugs for drinking or bowls to serve with mushroom pierogi.</li>
+    </ol>
     </ul>
 </body>
 </html>
