--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img id="headerimg" src="https://static.lieferando.de/images/restaurants/de/ROP133QN/logo_465x320.png">
     <h1 class="main header">Welcome to Adam's Kitchen recipes list</h1>
     <em><h1 class="recipes">Recipes:</h1></em>
-    <ul>
+    <ul class="ul">
     <li><a class="list pierogies" href="recipes/pierogies.html">Pierogies</a></li>
     <li><a class="list barszcz" href="recipes/polish-barszcz.html">Polish Barszcz</a></li>
     </ul>
